[package]
authors = ["Mick Sayson <mick@sayson.com>"]
name = "id-ip"
version = "0.1.0"

[[bin]]
name = "id-mac"
path = "src/id-mac.rs"

[[bin]]
name = "id-ip"
path = "src/id-ip.rs"

[dependencies]
error-chain = "0.11.0"
eui48 = "0.3.0"
oping = "0.3.3"
tempfile = "2.2.0"

[dependencies.arp]
git = "https://github.com/sphaerophoria/arp-rs"

[dependencies.pnet_datalink]
git = "https://github.com/libpnet/libpnet"
